chore: update to astro 5 and update prettier

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.16.13",
-    "prettier": "^3.3.3",
+    "astro": "5.0.4",
+    "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1"
   }
 }
