--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "astro": "^5.1.7"
   },
   "devDependencies": {
+    "eslint": "^9.18.0",
     "prettier": "^3.4.2",
     "prettier-plugin-astro": "^0.14.1"
   }
